<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.AddContactFragment">


        <ImageView
            android:id="@+id/add_contact_image_view"
            android:layout_width="@dimen/contact_detail_photo_dim"
            android:layout_height="@dimen/contact_detail_photo_dim"
            android:layout_marginTop="32dp"
            android:src="@drawable/ic_baseline_person_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/add_contact_name_text_field"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:hint="@string/name_string"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_contact_image_view">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/add_contact_name_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/add_contact_phone_number_text_field"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/phone_number_string"
            app:layout_constraintEnd_toEndOf="@+id/add_contact_name_text_field"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/add_contact_name_text_field"
            app:layout_constraintTop_toBottomOf="@+id/add_contact_name_text_field">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/add_contact_phone_number_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number|phone" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/add_contact_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/add_contact"
            app:layout_constraintEnd_toEndOf="@+id/add_contact_phone_number_text_field"
            app:layout_constraintStart_toStartOf="@+id/add_contact_phone_number_text_field"
            app:layout_constraintTop_toBottomOf="@+id/add_contact_phone_number_text_field" />

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/add_contact_loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:indeterminate="true"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/add_contact_button"
            app:layout_constraintEnd_toEndOf="@+id/add_contact_button"
            app:layout_constraintStart_toStartOf="@+id/add_contact_button"
            app:layout_constraintTop_toBottomOf="@+id/add_contact_phone_number_text_field" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>